--- a/index.html
+++ b/index.html
@@ -6,24 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       html, body {
-        width: 100%;
-        height: 100%;
         margin: 0;
         padding: 0;
+        width: 100%;
+        height: 100%;
         background-color: #444f5f;
         display: flex;
         justify-content: center;
         align-items: center;
       }
+
+      /* Container automatically fills full width, 
+         and keeps a consistent aspect ratio */
       #duka-container {
+        position: relative;
         width: 100%;
+        height: 0;
+        padding-bottom: 55%; /* Controls aspect ratio (adjust for height) */
         max-width: 100%;
-        height: 100%;
+        overflow: hidden;
+      }
+
+      /* The widget fills the entire container */
+      #duka-widget {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100% !important;
+        height: 100% !important;
+      }
+
+      /* Small screens - make it taller */
+      @media (max-width: 768px) {
+        #duka-container {
+          padding-bottom: 80%;
+        }
       }
     </style>
   </head>
   <body>
-    <div id="duka-container"></div>
+    <div id="duka-container">
+      <div id="duka-widget"></div>
+    </div>
 
     <script type="text/javascript">
       DukascopyApplet = {
